--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.Javafx_11.classpath}
+    ${libs.JavaFX11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -104,7 +104,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Program Files\\Java\\javafx-sdk-11.0.2\\lib" --add-modules javafx.controls,javafx.fxml
+run.jvmargs=--module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
