Retorna imagens no menu Produto Admin e atualizado gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /nbproject/private/
 /build/
 /dist/
+/nbproject/project.properties~Stashed changes
+/ListaProdutos.txt
+/nbproject/project.properties
