pesquisar produto menu vendedor

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /nbproject/project.properties~Stashed changes
 /ListaProdutos.txt
 /nbproject/project.properties
+/listVend.txt
+/ListaVendedores.txt
+/lista.txt
